Removed conflicts